Completed EDA Lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -1557,15 +1557,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Replace None with appropriate text\n",
-    "\"\"\"\n",
-    "None\n",
-    "\"\"\""
+    "OverallQual: Rates the overall material and finish of the house\n",
+    "\n",
+    "   10   Very Excellent\n",
+    "   9    Excellent\n",
+    "   8    Very Good\n",
+    "   7    Good\n",
+    "   6    Above Average\n",
+    "   5    Average\n",
+    "   4    Below Average\n",
+    "   3    Fair\n",
+    "   2    Poor\n",
+    "   1    Very Poor\n"
    ]
   },
   {
@@ -1655,13 +1661,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNewer houses appear to be more valuable, with value increasing\\nas homes age. Interestingly the variance seems to increase once the home\\nage goes over 100 years, with several above-average sale prices and fewer\\nhome sales in general.\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
-    "None\n",
+    "Newer houses appear to be more valuable, with value increasing\n",
+    "as homes age. Interestingly the variance seems to increase once the home\n",
+    "age goes over 100 years, with several above-average sale prices and fewer\n",
+    "home sales in general.\n",
     "\"\"\""
    ]
   },
@@ -1680,9 +1700,9 @@
    "hash": "842315827eda35ae06da62ed5d0e6c5405348e5b3815ba780bf229fe296feba5"
   },
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1694,7 +1714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
